--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <div class="container_page">
-        <div class="caracola">
+        <div class="caracola" id="caracola">
             <div class="cordon"></div>
+            <div class="cuerda"></div>
         </div>
         <div class="answer" id="answer"></div>
     </div>
